--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@
 </section>
 <!-- Cheat Day + Autopilot Readiness (tabbed settings sections) -->
 <div class="settingsSection" data-tab="autopilot" id="cheatDaySettings">
-  <h3>Cheat Day</h3>
+  <div class="settingsHeaderRow"><h3 style="margin:0;">Cheat Day</h3><button id="cheatDaySaveBtn" class="btnMini">Save</button></div>
   <label><input type="checkbox" id="cheatDayToggle"> Enable Cheat Day</label>
   <div class="goalAdjust">
     <label>Cheat Day</label>
