--- a/index.html
+++ b/index.html
@@ -606,8 +606,7 @@
 </div>
 </div>
 <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
-<script src="app-billing.js?v=1"></script>
-<script src="app.js?v=58"></script>
+<script src="app.bundle.js?v=1"></script>
 
 <div id="aiGlobalLoading" class="aiGlobalLoading hidden" role="status" aria-live="polite" aria-label="AI is working">
   <div class="aiGlobalLoadingCard">
