--- a/admin.html
+++ b/admin.html
@@ -247,8 +247,6 @@
   </div>
 
 
-  <script src="admin-api.js?v=1"></script>
-  <script src="admin-render.js?v=1"></script>
-  <script src="admin.js?v=2"></script>
+  <script src="admin.bundle.js?v=1"></script>
 </body>
 </html>
