--- a/index.html
+++ b/index.html
@@ -461,8 +461,8 @@
 <div class="onboardingStep">Step <span id="onboardingStepNum">1</span> of 3</div>
 <h2 id="onboardingTitle">Welcome to Aethon Calorie Tracker</h2>
 <div id="onboardingWelcomeScreen">
-<p>Welcome to Aethon Calorie Tracker</p>
-<p class="muted">We’ll use a few quick inputs to set a calorie and macro target tailored to your timeline.</p>
+<p class="hidden"></p>
+<p class="muted">We'll use a few quick inputs to set a weight training program tailored to your timeline</p>
 <button id="onboardingContinueBtn">Press to continue</button>
 <button class="linkMiniBtn" id="onboardingSignInBtn" type="button">Already paid? Sign in</button>
 </div>
