--- a/index.html
+++ b/index.html
@@ -467,7 +467,50 @@
 <button class="linkMiniBtn" id="onboardingSignInBtn" type="button">Already paid? Sign in</button>
 </div>
 <div class="hidden" id="onboardingInputScreen">
-<div class="grid2">
+<div class="grid2" id="workoutInputGrid">
+  <div>
+    <label>Primary goal</label>
+    <select id="wkGoalInput">
+      <option value="build_muscle" selected>Build muscle</option>
+      <option value="get_stronger">Get stronger</option>
+      <option value="powerlifting_prep">Powerlifting prep</option>
+      <option value="fat_loss_lifting">Fat loss (with lifting)</option>
+      <option value="athletic_performance">Athletic performance</option>
+      <option value="beginner_foundation">Beginner foundation</option>
+    </select>
+  </div>
+  <div>
+    <label>Training experience</label>
+    <select id="wkExperienceInput">
+      <option value="beginner" selected>Beginner (0–1 yrs)</option>
+      <option value="intermediate">Intermediate (1–3 yrs)</option>
+      <option value="advanced">Advanced (3+ yrs)</option>
+    </select>
+  </div>
+  <div>
+    <label>Days per week</label>
+    <select id="wkDaysInput">
+      <option value="2">2</option>
+      <option value="3" selected>3</option>
+      <option value="4">4</option>
+      <option value="5">5</option>
+      <option value="6">6</option>
+    </select>
+  </div>
+  <div>
+    <label>Equipment access</label>
+    <select id="wkEquipmentInput">
+      <option value="full_gym" selected>Full gym</option>
+      <option value="barbell_rack">Barbell + rack</option>
+      <option value="dumbbells_only">Dumbbells only</option>
+      <option value="home_minimal">Home minimal</option>
+      <option value="machines_preferred">Machines preferred</option>
+    </select>
+  </div>
+</div>
+
+<!-- Legacy fields kept (hidden) to preserve current backend/AI goal flow -->
+<div class="grid2 hidden" id="legacyGoalGrid">
 <div>
 <label>Current weight (<span class="aiInputUnitText">lbs</span>)</label>
 <input id="aiCurrentWeightInput" min="0" step="0.1" type="number"/>
@@ -493,8 +536,9 @@
 <div class="fieldError" id="aiGoalDateError"></div>
 </div>
 </div>
-<p class="muted">Your weight is stored in lbs internally and converted automatically if you use kg display.</p>
-<button id="aiGetPlanBtn" style="margin-top:12px;">Get AI Plan</button>
+
+<p class="muted">We’ll use these inputs to generate a starter weight training program. You can adjust it later.</p>
+<button id="aiGetPlanBtn" style="margin-top:12px;">Build My Program</button>
 <div class="muted hidden" id="aiGoalLoading">Generating your plan…</div>
 <div class="muted" id="aiGoalFlowError" style="color:#b00020;"></div>
 </div>
@@ -616,6 +660,62 @@
     </div>
   </div>
 </div>
+
+
+<script>
+(function(){
+  function isoDatePlusDays(days){
+    try{
+      var d = new Date();
+      d.setDate(d.getDate() + days);
+      var yyyy = d.getFullYear();
+      var mm = String(d.getMonth()+1).padStart(2,'0');
+      var dd = String(d.getDate()).padStart(2,'0');
+      return yyyy + '-' + mm + '-' + dd;
+    }catch(e){ return ''; }
+  }
+
+  // Capture-phase click handler: map new workout inputs into legacy fields so the existing AI flow continues to work.
+  document.addEventListener('click', function(e){
+    var t = e.target;
+    if(!t || t.id !== 'aiGetPlanBtn') return;
+
+    var goal = document.getElementById('wkGoalInput')?.value || '';
+    var exp  = document.getElementById('wkExperienceInput')?.value || '';
+    var days = document.getElementById('wkDaysInput')?.value || '';
+    var equip= document.getElementById('wkEquipmentInput')?.value || '';
+
+    // Persist for later (future workout-program backend can read these)
+    try{
+      localStorage.setItem('aethon_wk_goal', goal);
+      localStorage.setItem('aethon_wk_experience', exp);
+      localStorage.setItem('aethon_wk_days', days);
+      localStorage.setItem('aethon_wk_equipment', equip);
+    }catch(_){}
+
+    // Legacy mapping (temporary): keep current backend expecting numeric weight/date/activity.
+    var cw = document.getElementById('aiCurrentWeightInput');
+    var gw = document.getElementById('aiGoalWeightInput');
+    var al = document.getElementById('aiActivityLevelInput');
+    var gd = document.getElementById('aiGoalDateInput');
+
+    if(cw && !cw.value) cw.value = '180';
+    if(gw && !gw.value) gw.value = '180';
+
+    if(al){
+      // Map training experience to an "activity level" proxy (temporary)
+      if(exp === 'beginner') al.value = 'light';
+      else if(exp === 'advanced') al.value = 'very_active';
+      else al.value = 'moderate';
+    }
+
+    if(gd && !gd.value){
+      // Default timeline (temporary)
+      gd.value = isoDatePlusDays(56);
+    }
+  }, true);
+})();
+</script>
 
 </body>
 </html>
